--- a/object_diffusion_demo.ipynb
+++ b/object_diffusion_demo.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/jermwatt/morphi_lab/blob/object_diffusion_collab_demo/object_diffusion_demo.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/jermwatt/yolo_diffusion/blob/main/object_diffusion_demo.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -332,7 +332,8 @@
         "img_path = \"/content/test_donut.png\"\n",
         "label = 'donut'\n",
         "prompt='an orange, fruit, high resolution'\n",
-        "seed=3433\n",
+        "prompt='golden apple, high resolution'\n",
+        "seed=8740220430913305649\n",
         "\n",
         "# segment and diffuse\n",
         "main(img_path=img_path,\n",
@@ -402,8 +403,8 @@
         "# define parameters\n",
         "img_path = \"/content/pizza_cat.jpg\"\n",
         "label = 'cat'\n",
-        "prompt='anime nerd, high resolution'\n",
-        "seed=3433\n",
+        "prompt='sinister looking cartoon squirrel wearing sunglasses, high resolution'\n",
+        "seed=11985309897377528785\n",
         "\n",
         "# segment and diffuse\n",
         "main(img_path=img_path,\n",
