--- a/shape-e-tests.ipynb
+++ b/shape-e-tests.ipynb
@@ -21,41 +21,12 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "XvZ-6yqoLT9L"
-      },
       "source": [
-        "This notebook allows for experimentation with object detection + segmentation --> diffusion.\n",
-        "\n",
-        "To use it first:\n",
-        "\n",
-        "- select a gpu runtime: make sure you have chosen a GPU runtime from the options above - choose A100 if available.\n",
-        "- activate the first few cells to \n",
-        "  - perform a machine check: make sure your runtime is employing a GPU with sufficient memory\n",
-        "  - download associated files and installs\n",
-        "- start experimenting!\n",
-        "\n",
-        "### Some example experiments\n",
-        "\n",
-        "Here are the sort of experiments you can perform in this notebook.  On the left below we have a picture with two default yolo-recognizable objects: a `person` and a `donut` (there are around 70 pre-trained objects you can play with by default).  Using the functionality here you can replace either one independently.\n",
-        "\n",
-        "So you can replace the `person` as shown below.\n",
-        "\n",
-        "<img src='https://github.com/jermwatt/morphi_lab/blob/object_diffusion_collab_demo/test_data/example_person_replacement.png?raw=true'>\n",
-        "\n",
-        "Or just as easily the `donut` as shown here.\n",
-        "\n",
-        "<img src='https://github.com/jermwatt/morphi_lab/blob/ebc31b93c4e9ec941483723ab2cb99c38ce4929a/test_data/example_donut_replacement.png?raw=true'>\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
+        "## 1.  Machine setup"
+      ],
       "metadata": {
-        "id": "riciSGvmLT9L"
-      },
-      "source": [
-        "## 1.  machine setup and installs"
-      ]
+        "id": "VRYMICcKcH_x"
+      }
     },
     {
       "cell_type": "markdown",
@@ -101,7 +72,7 @@
         "id": "YGc-wRzC6ArW"
       },
       "source": [
-        "### 1.2. installs\n",
+        "### 1.2. installs - segmentation\n",
         "\n",
         "Activate the cell below to install all necessary packages to your collab enviroment for these experiments."
       ]
@@ -188,127 +159,105 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### 1.3.  Module setup\n",
-        "\n",
-        "Activate the next cell to load in the required functionality from your newly installed modules.\n",
-        "\n",
-        "The first time you do this both a Yolo and Diffusion models (so will take 30 seconds to a minute or two to execute)."
+        "### 1.2.2. shape-e installs"
       ],
       "metadata": {
-        "id": "1w367zdHNRHe"
+        "id": "DNIV4fzJceah"
       }
     },
     {
       "cell_type": "code",
       "source": [
-        "# import segmentation and diffusion modules via main module\n",
-        "from main import main"
+        "!git clone https://github.com/openai/shap-e.git /content/shap-e"
       ],
       "metadata": {
-        "id": "-NmNymg6NQnD"
+        "id": "2u1f9dQTce41"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# cannot seem to install in edit mode via : pip install . -e\n",
+        "!cd shap-e && pip install ."
+      ],
+      "metadata": {
+        "id": "I0SjqScNciY-"
       },
       "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "CVynTcEA6Q5S"
-      },
       "source": [
-        "## 2. start experimenting!"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Below we print out the set of available labels you can choose from in your test images."
+        "### 1.3.  Segmentation"
       ],
       "metadata": {
-        "id": "5E3GfGiwtXzr"
+        "id": "YKYhkccFdByo"
       }
     },
     {
       "cell_type": "code",
       "source": [
-        "from segmenter import label_lookup_dict\n",
-        "print('available labels to choose from for test image segmentation and diffusion')\n",
-        "print(list(label_lookup_dict.keys()))"
+        "from segmenter import segment_image, label_lookup_dict"
       ],
       "metadata": {
-        "id": "8GhUUsG2tdZ1"
+        "id": "08V1SYPgcrjz"
       },
       "execution_count": null,
       "outputs": []
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "De_NWYAJENBV"
-      },
-      "source": [
-        "### 2.1. diffuse a segmented object"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Let's segment out and diffuse the `person` in our test image."
-      ],
-      "metadata": {
-        "id": "93VlDdICRXpL"
-      }
-    },
-    {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "78C-TzyiEj--"
-      },
-      "outputs": [],
       "source": [
-        "## segment the donut out of the test image\n",
-        "# define parameters\n",
+        "# segment the donut out of the test image\n",
         "img_path = \"/content/test_donut.png\"\n",
-        "label = 'person'\n",
-        "prompt='an ape, smiling, high resolution, holding something'\n",
-        "seed=3433\n",
-        "\n",
-        "# segment and diffuse\n",
-        "main(img_path=img_path,\n",
-        "     label=label,\n",
-        "     prompt=prompt,\n",
-        "     seed=seed)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Notice the fixed `seed` I am inputing (to keep the output look the same).  If you want a random seed - simply omit this option.\n",
-        "\n",
-        "\n",
-        "Let's try this below."
+        "labels = ['person']\n",
+        "img, mask, seg = segment_image(img_path,\n",
+        "                               labels=labels)"
       ],
       "metadata": {
-        "id": "X_3r8qJ8MBsE"
-      }
+        "id": "RMi1npTRcrmo"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "## segment the donut out of the test image\n",
-        "# define parameters\n",
-        "img_path = \"/content/test_donut.png\"\n",
-        "label = 'person'\n",
-        "prompt='an ape, smiling, high resolution, holding something'\n",
-        "\n",
-        "# segment and diffuse\n",
-        "main(img_path=img_path,\n",
-        "     label=label,\n",
-        "     prompt=prompt)"
+        "seg.show_result()"
       ],
       "metadata": {
-        "id": "_f1qjt6GMNIn"
+        "id": "ZXRk-Mv1crp6"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# set mask to 1 where img is non zero\n",
+        "mask[mask!=0] = 1\n",
+        "\n",
+        "# multiply elementwise img and mask\n",
+        "img_masked = seg.orig_img*mask"
+      ],
+      "metadata": {
+        "id": "i0Le_csIgR5k"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import matplotlib.pyplot as plt\n",
+        "plt.imshow(img_masked.astype(int))\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "H4fSztkGgV2s"
       },
       "execution_count": null,
       "outputs": []
@@ -316,139 +265,98 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Let's try the same image - different object.\n",
-        "\n",
-        "Now let's replace the `donut`. "
+        "### 1.4.  Feed into shap-e"
       ],
       "metadata": {
-        "id": "Xqp0TnolLi9j"
+        "id": "__NT1U8Ydqi0"
       }
     },
     {
       "cell_type": "code",
       "source": [
-        "## segment the donut out of the test image\n",
-        "# define parameters\n",
-        "img_path = \"/content/test_donut.png\"\n",
-        "label = 'donut'\n",
-        "prompt='an orange, fruit, high resolution'\n",
-        "prompt='golden apple, high resolution'\n",
-        "seed=8740220430913305649\n",
-        "\n",
-        "# segment and diffuse\n",
-        "main(img_path=img_path,\n",
-        "     label=label,\n",
-        "     prompt=prompt,\n",
-        "     seed=seed)"
+        "import shap_e\n",
+        "import torch\n",
+        "from shap_e.diffusion.sample import sample_latents\n",
+        "from shap_e.diffusion.gaussian_diffusion import diffusion_from_config\n",
+        "from shap_e.models.download import load_model, load_config\n",
+        "from shap_e.util.notebooks import create_pan_cameras, decode_latent_images, gif_widget\n",
+        "from shap_e.util.image_util import load_image\n",
+        "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')"
       ],
       "metadata": {
-        "id": "3T-kp41MMbRX"
+        "id": "nXbSpFTddiK4"
       },
       "execution_count": null,
       "outputs": []
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "Note there are several optinal arguments you can play with here visa-vis the diffuser that I didn't mess with in this example, including\n",
-        "  - `negative_prompt` (default is None)\n",
-        "  - `num_inference_steps` (default is 100)"
-      ],
-      "metadata": {
-        "id": "vhCiqNfC-c9R"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "### 2.4. Trying your own\n",
-        "\n",
-        "You can try your own image by pulling one via the `download_file` function above, or by downloading and dragging / dropping into the `/content` directory by hand.  Note for now the diffuser only accepts `.png` and `.jpg/jpeg`.\n",
-        "\n",
-        "You then use the same function calls executed above - tailored to your specific image.\n",
-        "\n",
-        "I'm going to use the url downloader to get a picture of a cat stealing pizza."
-      ],
-      "metadata": {
-        "id": "ogkosAoo97yh"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
-        "# pizza stealing cat\n",
-        "url = \"https://i.ytimg.com/vi/IflVaMkULxg/hqdefault.jpg\"\n",
-        "output_path = \"/content/pizza_cat.jpg\"\n",
-        "download_file(url, output_path)"
+        "# load in shap-e models\n",
+        "xm = load_model('transmitter', device=device)\n",
+        "model = load_model('image300M', device=device)\n",
+        "diffusion = diffusion_from_config(load_config('diffusion'))"
       ],
       "metadata": {
-        "id": "IEcGj3b0BEpw"
+        "id": "DRPg49MNeFaO"
       },
       "execution_count": null,
       "outputs": []
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "Let's first replace the cat!"
-      ],
-      "metadata": {
-        "id": "410XxbgZBYby"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
-        "## segment and diffuse cat\n",
-        "# define parameters\n",
-        "img_path = \"/content/pizza_cat.jpg\"\n",
-        "label = 'cat'\n",
-        "prompt='sinister looking cartoon squirrel wearing sunglasses, high resolution'\n",
-        "seed=11985309897377528785\n",
+        "batch_size = 4\n",
+        "guidance_scale = 3.0\n",
         "\n",
-        "# segment and diffuse\n",
-        "main(img_path=img_path,\n",
-        "     label=label,\n",
-        "     prompt=prompt,\n",
-        "     seed=seed)"
+        "# To get the best result, you should remove the background and show only the object of interest to the model.\n",
+        "image = load_image(\"/content/test_donut.png\")\n",
+        "\n",
+        "latents = sample_latents(\n",
+        "    batch_size=batch_size,\n",
+        "    model=model,\n",
+        "    diffusion=diffusion,\n",
+        "    guidance_scale=guidance_scale,\n",
+        "    model_kwargs=dict(images=[img_masked] * batch_size),\n",
+        "    progress=True,\n",
+        "    clip_denoised=True,\n",
+        "    use_fp16=True,\n",
+        "    use_karras=True,\n",
+        "    karras_steps=64,\n",
+        "    sigma_min=1e-3,\n",
+        "    sigma_max=160,\n",
+        "    s_churn=0,\n",
+        ")"
       ],
       "metadata": {
-        "id": "3pPeGLx89-l9"
+        "id": "8GeTXQ_SeSAa"
       },
       "execution_count": null,
       "outputs": []
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "source": [
-        "Now let's try replacing the pizza."
+        "render_mode = 'nerf' # you can change this to 'stf' for mesh rendering\n",
+        "size = 256 # this is the size of the renders; higher values take longer to render.\n",
+        "\n",
+        "cameras = create_pan_cameras(size, device)\n",
+        "for i, latent in enumerate(latents):\n",
+        "    images = decode_latent_images(xm, latent, cameras, rendering_mode=render_mode)\n",
+        "    display(gif_widget(images))\n",
+        "    break"
       ],
       "metadata": {
-        "id": "z9_jAPvbASeF"
-      }
+        "id": "31I_gaHyegv0"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [
-        "## segment and diffuse pizza\n",
-        "# define parameters\n",
-        "img_path = \"/content/pizza_cat.jpg\"\n",
-        "label = 'pizza'\n",
-        "prompt='a pile of cash, fanned out, high resolution'\n",
-        "negative_prompt='low quality'\n",
-        "num_inference_steps=100\n",
-        "seed=4637\n",
-        "\n",
-        "# segment and diffuse\n",
-        "main(img_path=img_path,\n",
-        "     label=label,\n",
-        "     prompt=prompt,\n",
-        "     seed=seed,\n",
-        "     negative_prompt=negative_prompt,\n",
-        "     num_inference_steps=num_inference_steps)"
-      ],
+      "source": [],
       "metadata": {
-        "id": "Gv02Xbso_2Lf"
+        "id": "8ui4Jnicfad8"
       },
       "execution_count": null,
       "outputs": []
@@ -457,7 +365,7 @@
   "metadata": {
     "accelerator": "GPU",
     "colab": {
-      "gpuType": "A100",
+      "gpuType": "T4",
       "machine_shape": "hm",
       "private_outputs": true,
       "provenance": [],
