--- a/object_diffusion_demo.ipynb
+++ b/object_diffusion_demo.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/jermwatt/yolo_diffusion/blob/main/object_diffusion_demo.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/jermwatt/yolo-diffusion/blob/main/object_diffusion_demo.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -30,22 +30,22 @@
         "To use it first:\n",
         "\n",
         "- select a gpu runtime: make sure you have chosen a GPU runtime from the options above - choose A100 if available.\n",
-        "- activate the first few cells to \n",
+        "- activate the first few cells to\n",
         "  - perform a machine check: make sure your runtime is employing a GPU with sufficient memory\n",
         "  - download associated files and installs\n",
         "- start experimenting!\n",
         "\n",
         "### Some example experiments\n",
         "\n",
-        "Here are the sort of experiments you can perform in this notebook.  On the left below we have a picture with two default yolo-recognizable objects: a `person` and a `donut` (there are around 70 pre-trained objects you can play with by default).  Using the functionality here you can replace either one independently.\n",
+        "Here are the sort of experiments you can perform in this notebook.  On the left below we have a picture with two default yolo-recognizable objects: a `pizza` and a `cart` (there are around 70 pre-trained objects you can play with by default).  Using the functionality here you can replace either one independently.\n",
         "\n",
-        "So you can replace the `person` as shown below.\n",
+        "So you can replace the `pizza` as shown below.\n",
         "\n",
-        "<img src='https://github.com/jermwatt/morphi_lab/blob/object_diffusion_collab_demo/test_data/example_person_replacement.png?raw=true'>\n",
+        "<img src='https://github.com/jermwatt/yolo-diffusion/blob/main/test_data/cat_cash.png?raw=true'>\n",
         "\n",
-        "Or just as easily the `donut` as shown here.\n",
+        "Or just as easily the `cat` as shown here.\n",
         "\n",
-        "<img src='https://github.com/jermwatt/morphi_lab/blob/ebc31b93c4e9ec941483723ab2cb99c38ce4929a/test_data/example_donut_replacement.png?raw=true'>\n"
+        "<img src='https://github.com/jermwatt/yolo-diffusion/blob/main/test_data/squirrel_pizza.png?raw=true'>\n"
       ]
     },
     {
@@ -114,7 +114,7 @@
       },
       "outputs": [],
       "source": [
-        "# install reqiured libraries \n",
+        "# install reqiured libraries\n",
         "!pip install \"ultralytics==8.0.111\" \"transformers==4.29.2\" \"timm==0.9.2\" \"diffusers==0.16.1\" \"safetensors==0.3.1\" \"accelerate==0.19.0\""
       ]
     },
@@ -137,22 +137,22 @@
         "    urllib.request.urlretrieve(url, output_path)\n",
         "\n",
         "# pull segmentation module\n",
-        "url = \"https://raw.githubusercontent.com/jermwatt/morphi_lab/object_diffusion_collab_demo/segmenter.py\"\n",
+        "url = \"https://raw.githubusercontent.com/jermwatt/yolo-diffusion/main/segmenter.py\"\n",
         "local_path = \"/content/segmenter.py\"\n",
         "download_file(url,local_path)\n",
         "\n",
         "# pull diffusion module\n",
-        "url = \"https://raw.githubusercontent.com/jermwatt/morphi_lab/object_diffusion_collab_demo/diffuser.py\"\n",
+        "url = \"https://raw.githubusercontent.com/jermwatt/yolo-diffusion/main/diffuser.py\"\n",
         "local_path = \"/content/diffuser.py\"\n",
         "download_file(url,local_path)\n",
         "\n",
         "# pull utilities module\n",
-        "url = \"https://raw.githubusercontent.com/jermwatt/morphi_lab/object_diffusion_collab_demo/utilities.py\"\n",
+        "url = \"https://raw.githubusercontent.com/jermwatt/yolo-diffusion/main/utilities.py\"\n",
         "local_path = \"/content/utilities.py\"\n",
         "download_file(url,local_path)\n",
         "\n",
         "# pull main module\n",
-        "url = \"https://raw.githubusercontent.com/jermwatt/morphi_lab/object_diffusion_collab_demo/main.py\"\n",
+        "url = \"https://raw.githubusercontent.com/jermwatt/yolo-diffusion/main/main.py\"\n",
         "local_path = \"/content/main.py\"\n",
         "download_file(url,local_path)"
       ],
@@ -318,7 +318,7 @@
       "source": [
         "Let's try the same image - different object.\n",
         "\n",
-        "Now let's replace the `donut`. "
+        "Now let's replace the `donut`."
       ],
       "metadata": {
         "id": "Xqp0TnolLi9j"
@@ -457,7 +457,7 @@
   "metadata": {
     "accelerator": "GPU",
     "colab": {
-      "gpuType": "A100",
+      "gpuType": "T4",
       "machine_shape": "hm",
       "private_outputs": true,
       "provenance": [],
