--- a/object_diffusion_demo.ipynb
+++ b/object_diffusion_demo.ipynb
@@ -16,7 +16,7 @@
         "id": "kVbKjgHovhAm"
       },
       "source": [
-        "# Single object diffusion demo"
+        "# Object detection + stable diffusion in python"
       ]
     },
     {
